# zarrmony-blaze

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: v0.1-design.md
docs/adr/: 0001-tifffile-over-bioio-ome-tiff.md
scripts/: build_macs_iq_subset.py
src/zarrmony_blaze/: __init__.py  _ome_xml.py  adapter.py  match.py
tests/: conftest.py  test_adapter.py  test_install_smoke.py  test_match.py  test_ome_xml.py  test_real_macs_iq.py
tests/fixtures/: README.md
tests/fixtures/macs_iq_subset/: 18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C00_Z0000.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C00_Z0001.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C00_Z0002.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C00_Z0003.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C01_Z0000.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C01_Z0001.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C01_Z0002.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C01_Z0003.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C02_Z0000.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C02_Z0001.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C02_Z0002.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C02_Z0003.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C03_Z0000.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C03_Z0001.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C03_Z0002.ome.tif  18-05-47_305-2_AI-04-5_Old-07_lungTLO_Blaze_C03_Z0003.ome.tif
